--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ body{
 }
 
 .login-container{
-  width:90%;
-  max-width:380px;
+  width:80%;
+  max-width:320px;
   background:#fff;
   padding:35px;
   text-align:center;
@@ -39,7 +39,7 @@ body{
 .login-container p{color:#555}
 
 input{
-  width:100%;
+  width:90%;
   padding:14px;
   margin:10px 0;
   border:2px solid #bbb;
@@ -192,7 +192,7 @@ button{
   <div class="login-container">
     <h1>Latihan Reading Korea</h1>
     <p>25 Soal | Waktu 50 Menit</p>
-    <h2>🔐 Masuk</h2>
+    <h2>ðŸ” Masuk</h2>
     <input id="username" placeholder="Username">
     <input id="password" type="password" placeholder="Password">
     <input id="kode" placeholder="Kode Soal">
