--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@ body{
 }
 
 .login-container{
-  width:80%;
-  max-width:320px;
-  background:#fff;
+  width:90%;
+  max-width:280px;
   padding:35px;
   text-align:center;
+  background:rgba(255,255,255,0.12); /* TRANSPARAN */
+  backdrop-filter:blur(6px);
   box-shadow:0 15px 40px rgba(0,0,0,.4);
-  border-radius:0;
 }
 
-.login-container h1{color:#1a237e}
-.login-container h2{color:#4a148c}
-.login-container p{color:#555}
+.login-container h1,
+.login-container h2,
+.login-container p{
+  color:#fff;
+}
 
 input{
-  width:90%;
+  width:88%;
   padding:14px;
   margin:10px 0;
-  border:2px solid #bbb;
-  border-radius:0;
+  border:2px solid rgba(255,255,255,.7);
+  background:rgba(255,255,255,.85);
 }
 
 button{
@@ -53,7 +55,6 @@ button{
   background:#3f51b5;
   color:#fff;
   border:none;
-  border-radius:0;
   font-weight:bold;
   cursor:pointer;
 }
@@ -64,7 +65,7 @@ button{
   min-height:100vh;
   padding-top:70px;
   padding-bottom:70px;
-  background:linear-gradient(#fdf6ec,#f7efe2); /* BG krem lembut */
+  background:linear-gradient(#fdf6ec,#f7efe2);
 }
 
 .header-fixed{
@@ -110,6 +111,7 @@ button{
   border:2px solid #bbdefb;
   margin-bottom:15px;
 }
+
 .box-passage audio,
 .box-passage img{
   width:100%;
@@ -132,9 +134,7 @@ button{
   cursor:pointer;
 }
 
-.option-item input{
-  display:none;
-}
+.option-item input{display:none;}
 
 .option-circle{
   width:28px;
@@ -147,11 +147,6 @@ button{
   font-weight:bold;
   background:transparent;
   margin-right:10px;
-  flex-shrink:0;
-}
-
-.option-text{
-  line-height:1.4;
 }
 
 .option-item input:checked + .option-circle{
@@ -159,7 +154,7 @@ button{
   border-color:#1e88e5;
 }
 
-/* ================= NAV BOTTOM ================= */
+/* ================= NAV ================= */
 .nav-bottom{
   position:fixed;
   bottom:0;
