--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Latihan Reading Korea</title>
+<title>TEST BAHASA KOREA</title>
 
 <style>
 body{
@@ -185,13 +185,13 @@ button{
 <!-- LOGIN -->
 <div id="login-page">
   <div class="login-container">
-    <h1>Latihan Reading Korea</h1>
+    <h1>LATIHAN SOAL / 연습</h1>
     <p>25 Soal | Waktu 50 Menit</p>
-    <h2>ðŸ” Masuk</h2>
-    <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password">
-    <input id="kode" placeholder="Kode Soal">
-    <button id="btnLogin">MULAI</button>
+    <h2>LOGIN / 로그인/h2>
+    <input id="username" placeholder="Username / 이름">
+    <input id="password" type="password" placeholder="Password / 비밀번호">
+    <input id="kode" placeholder="Kode Soal / 시험코드">
+    <button id="btnLogin">MULAI / 시작</button>
   </div>
 </div>
 
@@ -312,3 +312,4 @@ function startTimer(){
 
 </body>
 </html>
+
