--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ button{
 <!-- LOGIN -->
 <div id="login-page">
   <div class="login-container">
-    <h1>LATIHAN SOAL / 연습</h1>
+    <h1>LATIHAN SOAL</h1>
+	<h1>연습</h1>
     <p>25 Soal | Waktu 50 Menit</p>
-    <h2>LOGIN / 로그인/h2>
     <input id="username" placeholder="Username / 이름">
     <input id="password" type="password" placeholder="Password / 비밀번호">
     <input id="kode" placeholder="Kode Soal / 시험코드">
-    <button id="btnLogin">MULAI / 시작</button>
+    <button id="btnLogin">LOGIN / 로그인</button>
   </div>
 </div>
 
@@ -312,4 +312,3 @@ function startTimer(){
 
 </body>
 </html>
-
