--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ const validCredentials={
 
 const kodeMapping={
   "B12345":"soal1.json",
+  "SAREWAE":"soal5.json",
   "A09008":"soal2.json",
   "W11765":"soal3.json",
   "H66633":"soal4.json"
@@ -319,3 +320,4 @@ function startTimer(){
 
 </body>
 </html>
+
