--- a/index.html
+++ b/index.html
@@ -121,8 +121,23 @@ const resultBox=document.getElementById("resultBox");
 
 /* ===== DATA ===== */
 const validCredentials={
-  "uus":"123","kimjong2":"kimju456","siswa01":"tryout26",
-  "koreafan":"hanguk789","topik2026":"seoul2026"
+  "uus":"123",
+  "user01":"12345",
+  "hanarizka":"Nungkihana24!",
+  "user3":"12345",
+  "siswa01":"12345",
+  "windi":"Windi2000",
+  "rismaya97":"bahasakorea",
+  "admin":"admin123",
+  "Fikrisurya":"464646",
+  "Mutiara2003":"Mutiara14",
+  "admin":"admin123",role:"admin",
+  "sita77":"minyooki",
+  "Aini185":"Doraemon",
+  "Hangeulfei":"studykorea02",
+  "Hamdan106":"Fukuo106",
+  "koreafan":"hanguk789",
+  "topik2026":"seoul2026"
 };
 const kodeMapping={
   "B12345":"soal1.json","A09008":"soal2.json",
@@ -227,3 +242,4 @@ function startTimer(){
 </script>
 </body>
 </html>
+
