--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 <div id="login-page">
   <div class="login-container">
     <h1>LATIHAN SOAL</h1>
+    <h1>한국어연습</h1>
     <p>25 Soal | 50 Menit</p>
-    <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password">
-    <input id="kode" placeholder="Kode Soal">
-    <button id="btnLogin">LOGIN</button>
+    <input id="username" placeholder="Username / 이름">
+    <input id="password" type="password" placeholder="Password / 비밀번호">
+    <input id="kode" placeholder="Kode Soal / 시험코드">
+    <button id="btnLogin">LOGIN / 로그인</button>
   </div>
 </div>
 
@@ -242,4 +243,5 @@ function startTimer(){
 </script>
 </body>
 </html>
+
 
