--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@ const validCredentials={
   "topik2026":"seoul2026"
 };
 const kodeMapping={
-  "B12345":"soal1.json","A09008":"soal2.json",
-  "SAREWAE":"soal5.json","A09008":"soal2.json",
-  "W11765":"soal3.json","H66633":"soal4.json"
+  "B12345":"soal1.json",
+  "A09008":"soal2.json",
+  "SAREWAE":"soal5.json",
+  "A09008":"soal2.json",
+  "W11765":"soal3.json",
+  "H66633":"soal4.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
@@ -243,5 +246,6 @@ function startTimer(){
 </script>
 </body>
 </html>
+
 
 
