--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@ body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
 
 /* LOGIN */
 #login-page{
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
-  url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
+ min-height:100vh;
+ display:flex;
+ justify-content:center;
+ align-items:center;
+ background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+ url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
 }
 .login-container{
-  width:90%;max-width:280px;padding:35px;text-align:center;
-  background:rgba(255,255,255,.12);
-  backdrop-filter:blur(6px);
+ width:90%;max-width:280px;padding:35px;text-align:center;
+ background:rgba(255,255,255,.12);
+ backdrop-filter:blur(6px);
 }
 .login-container h1,.login-container p{color:#fff}
 input{width:88%;padding:14px;margin:10px 0}
@@ -29,8 +29,8 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 /* QUIZ */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{
-  position:fixed;top:0;width:100%;display:flex;gap:6px;
-  background:#fff;padding:6px;z-index:1000
+ position:fixed;top:0;width:100%;display:flex;gap:6px;
+ background:#fff;padding:6px;z-index:1000
 }
 .timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
 .timer{background:#4caf50}
@@ -49,14 +49,14 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 .option-item{display:flex;align-items:flex-start;margin:12px 0}
 .option-item input{display:none}
 .option-circle{
-  width:28px;height:28px;border:1.5px solid #000;border-radius:50%;
-  display:flex;align-items:center;justify-content:center;margin-right:10px
+ width:28px;height:28px;border:1.5px solid #000;border-radius:50%;
+ display:flex;align-items:center;justify-content:center;margin-right:10px
 }
 .option-item input:checked + .option-circle{background:#bbdefb}
 
 .nav-bottom{
-  position:fixed;bottom:0;width:100%;display:flex;gap:6px;
-  background:#fff;padding:6px
+ position:fixed;bottom:0;width:100%;display:flex;gap:6px;
+ background:#fff;padding:6px
 }
 .nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
 #prev{background:#2196f3}
@@ -66,13 +66,13 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 #result-page{display:none;max-width:600px;margin:auto;padding:20px}
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
 .wrong-item{
-  margin-top:15px;padding:12px;
-  background:#ffebee;border-left:5px solid #f44336
+ margin-top:15px;padding:12px;
+ background:#ffebee;border-left:5px solid #f44336
 }
 .correct{color:green;font-weight:bold}
 .back-btn{
-  margin-top:20px;padding:14px;
-  background:#3f51b5;color:#fff;text-align:center;cursor:pointer
+ margin-top:20px;padding:14px;
+ background:#3f51b5;color:#fff;text-align:center;cursor:pointer
 }
 </style>
 </head>
@@ -80,37 +80,36 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 <body>
 
 <div id="login-page">
-  <div class="login-container">
-    <h1>LATIHAN SOAL</h1>
-    <h1>한국어연습</h1>
-    <p>25 Soal | 50 Menit</p>
-    <input id="username" placeholder="Username / 이름">
-    <input id="password" type="password" placeholder="Password / 비밀번호">
-    <input id="kode" placeholder="Kode Soal / 시험코드">
-    <button id="btnLogin">LOGIN / 로그인</button>
-  </div>
+ <div class="login-container">
+ <h1>LATIHAN SOAL</h1>
+ <h1>한국어연습</h1>
+ <p>25 Soal | 50 Menit</p>
+ <input id="username" placeholder="Username / 이름">
+ <input id="password" type="password" placeholder="Password / 비밀번호">
+ <input id="kode" placeholder="Kode Soal / 시험코드">
+ <button id="btnLogin">LOGIN / 로그인</button>
+ </div>
 </div>
 
 <div id="quiz-page">
-  <div class="header-fixed">
-    <div class="submit-top" id="submitTop">SUBMIT</div>
-    <div class="timer" id="timer">50:00</div>
-  </div>
-  <div class="container"><form id="quiz-form"></form></div>
-  <div class="nav-bottom">
-    <button id="prev">PREV</button>
-    <button id="next">NEXT</button>
-  </div>
+ <div class="header-fixed">
+ <div class="submit-top" id="submitTop">SUBMIT</div>
+ <div class="timer" id="timer">50:00</div>
+ </div>
+ <div class="container"><form id="quiz-form"></form></div>
+ <div class="nav-bottom">
+ <button id="prev">PREV</button>
+ <button id="next">NEXT</button>
+ </div>
 </div>
 
 <div id="result-page">
-  <div class="result-box" id="resultBox"></div>
+ <div class="result-box" id="resultBox"></div>
 </div>
 
 <script>
 document.addEventListener("DOMContentLoaded",()=>{
 
-/* ===== AMBIL ELEMENT (FIX LOGIN NO RESPON) ===== */
 const loginPage=document.getElementById("login-page");
 const quizPage=document.getElementById("quiz-page");
 const resultPage=document.getElementById("result-page");
@@ -120,132 +119,136 @@ const quizForm=document.getElementById("quiz-form");
 const timerEl=document.getElementById("timer");
 const resultBox=document.getElementById("resultBox");
 
-/* ===== DATA ===== */
 const validCredentials={
-  "uus":"123",
-  "user01":"12345",
-  "hanarizka":"Nungkihana24!",
-  "user3":"12345",
-  "siswa01":"12345",
-  "windi":"Windi2000",
-  "rismaya97":"bahasakorea",
-  "admin":"admin123",
-  "Fikrisurya":"464646",
-  "Mutiara2003":"Mutiara14",
-  "admin":"admin123",role:"admin",
-  "sita77":"minyooki",
-  "Aini185":"Doraemon",
-  "Hangeulfei":"studykorea02",
-  "Hamdan106":"Fukuo106",
-  "koreafan":"hanguk789",
-  "topik2026":"seoul2026"
+ "uus":"123",
+ "user01":"12345",
+ "hanarizka":"Nungkihana24!",
+ "user3":"12345",
+ "siswa01":"12345",
+ "windi":"Windi2000",
+ "rismaya97":"bahasakorea",
+ "admin":"admin123",
+ "Fikrisurya":"464646",
+ "Mutiara2003":"Mutiara14",
+ "sita77":"minyooki",
+ "Aini185":"Doraemon",
+ "Hangeulfei":"studykorea02",
+ "Hamdan106":"Fukuo106",
+ "koreafan":"hanguk789",
+ "topik2026":"seoul2026"
 };
 const kodeMapping={
-  "B12345":"soal1.json",
-  "A09008":"soal2.json",
-  "SAREWAE":"soal5.json",
-  "A09008":"soal2.json",
-  "W11765":"soal3.json",
-  "H66633":"soal4.json"
+ "B12345":"soal1.json",
+ "A09008":"soal2.json",
+ "SAREWAE":"soal5.json",
+ "W11765":"soal3.json",
+ "H66633":"soal4.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
 let questions=[],answers=[],current=0,time=3000,interval;
+let currentUser="", currentKode="";
 
-/* ===== LOGIN FIX ===== */
 btnLogin.onclick=()=>{
-  const u=username.value.trim();
-  const p=password.value.trim();
-  const k=kode.value.trim().toUpperCase();
+ const u=document.getElementById("username").value.trim();
+ const p=document.getElementById("password").value.trim();
+ const k=document.getElementById("kode").value.trim().toUpperCase();
 
-  if(validCredentials[u]===p && kodeMapping[k]){
-    loginPage.style.display="none";
-    quizPage.style.display="block";
-    loadSoal(kodeMapping[k]);
-    startTimer();
-  }else{
-    alert("Username / Password / Kode salah");
-  }
+ if(validCredentials[u]===p && kodeMapping[k]){
+  currentUser = u;
+  currentKode = k;
+  loginPage.style.display="none";
+  quizPage.style.display="block";
+  loadSoal(kodeMapping[k]);
+  startTimer();
+ }else{
+  alert("Username / Password / Kode salah");
+ }
 };
 
-/* ===== LOAD SOAL ===== */
 async function loadSoal(file){
-  questions=await (await fetch(BASE+file)).json();
-  answers=Array(questions.length).fill(null);
-  quizForm.innerHTML="";
-  questions.forEach((q,i)=>{
-    quizForm.innerHTML+=`
-    <div class="question-wrapper">
-      <div class="box-passage">
-        ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
-        ${q.image?`<img src="${q.image}">`:""}
-      </div>
-      <div class="box-question">
-        <p><b>${i+1}.</b> ${q.question}</p>
-        ${Object.entries(q.options).map(([k,v],idx)=>`
-          <label class="option-item">
-            <input type="radio" name="q${i}" value="${k}">
-            <span class="option-circle">${idx+1}</span>${v}
-          </label>`).join("")}
-      </div>
-    </div>`;
-  });
-  document.querySelectorAll("input").forEach(r=>{
-    r.onchange=()=>answers[+r.name.slice(1)]=r.value;
-  });
-  show(0);
+ questions=await (await fetch(BASE+file)).json();
+ answers=Array(questions.length).fill(null);
+ quizForm.innerHTML="";
+ questions.forEach((q,i)=>{
+  quizForm.innerHTML+=`
+   <div class="question-wrapper">
+   <div class="box-passage">
+   ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
+   ${q.image?`<img src="${q.image}">`:""}
+   </div>
+   <div class="box-question">
+   <p><b>${i+1}.</b> ${q.question}</p>
+   ${Object.entries(q.options).map(([k,v],idx)=>`
+   <label class="option-item">
+   <input type="radio" name="q${i}" value="${k}">
+   <span class="option-circle">${idx+1}</span>${v}
+   </label>`).join("")}
+   </div>
+   </div>`;
+ });
+ document.querySelectorAll("input").forEach(r=>{
+  r.onchange=()=>answers[+r.name.slice(1)]=r.value;
+ });
+ show(0);
 }
 
-/* ===== NAV & AUDIO STOP ===== */
 function show(n){
-  document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
-  document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
-  current=n;
+ document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
+ document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
+ current=n;
 }
-prev.onclick=()=>current>0&&show(current-1);
-next.onclick=()=>current<questions.length-1&&show(current+1);
+document.getElementById("prev").onclick=()=>current>0&&show(current-1);
+document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
 
-/* ===== SUBMIT + REVIEW ===== */
 submitTop.onclick=()=>{
-  const kosong=answers.findIndex(a=>a===null);
-  if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
+ const kosong=answers.findIndex(a=>a===null);
+ if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
 
-  clearInterval(interval);
-  quizPage.style.display="none";
-  resultPage.style.display="block";
+ clearInterval(interval);
+ quizPage.style.display="none";
+ resultPage.style.display="block";
 
-  let score=0,html="";
-  questions.forEach((q,i)=>{
-    const benar=q.answer;
-    if(answers[i]===benar) score+=4;
-    else html+=`
-      <div class="wrong-item">
-        <b>Soal ${i+1} salah</b><br>
-        Jawaban benar: <span class="correct">${benar}</span><br>
-        ${q.explanation||"-"}
-      </div>`;
-  });
+ let score=0,html="";
+ questions.forEach((q,i)=>{
+  const benar=q.answer;
+  if(answers[i]===benar) score+=4;
+  else html+=`
+   <div class="wrong-item">
+   <b>Soal ${i+1} salah</b><br>
+   Jawaban benar: <span class="correct">${benar}</span><br>
+   ${q.explanation||"-"}
+   </div>`;
+ });
 
-  resultBox.innerHTML=`
-    <h2>Nilai: ${score}</h2>
-    ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
-    <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
+ // KIRIM DATA KE ADMIN VIA localStorage
+ const resultData = {
+  username: currentUser,
+  kode: currentKode,
+  nilai: score,
+  tanggal: new Date().toLocaleString('id-ID')
+ };
+
+ let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
+ allResults.push(resultData);
+ localStorage.setItem("quizResults", JSON.stringify(allResults));
+
+ resultBox.innerHTML=`
+  <h2>Nilai: ${score}</h2>
+  ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
+  <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
 };
 
-/* ===== TIMER ===== */
 function startTimer(){
-  interval=setInterval(()=>{
-    timerEl.textContent=
-      String(Math.floor(time/60)).padStart(2,"0")+":"+
-      String(time%60).padStart(2,"0");
-    if(--time<0) submitTop.onclick();
-  },1000);
+ interval=setInterval(()=>{
+  timerEl.textContent=
+  String(Math.floor(time/60)).padStart(2,"0")+":"+
+  String(time%60).padStart(2,"0");
+  if(--time<0) submitTop.onclick();
+ },1000);
 }
 
 });
 </script>
 </body>
 </html>
-
-
-
